--- a/src/style/reset.less
+++ b/src/style/reset.less
@@ -80,3 +80,9 @@ html {
         font-size: calc(22px + 6 * (100vw - 1000px) / 1000);
     }
 }
+
+h2{
+    font-size: .8rem;
+    font-weight: bold;
+    white-space: nowrap;
+}
