--- a/src/style/reset.less
+++ b/src/style/reset.less
@@ -81,8 +81,17 @@ html {
     }
 }
 
+h1{
+    font-size: 1.2rem;
+    font-weight: bold;
+    white-space: nowrap;
+}
 h2{
     font-size: .8rem;
     font-weight: bold;
+    white-space: nowrap;
+}
+h3{
+    font-size: .8rem;
     white-space: nowrap;
 }
